[tool.poetry]
name = "Uptimer"
version = "0.1.1"
description = "Plugin-based prober to determine website uptime"
authors = [
    "Jan Willhaus <mail@janwillhaus.de>",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = {version = "^3.0",extras = ["format"]}
dynaconf = {version = "~2.0.2",extras = ["all"]}
requests = {version = "^2.25",extras = ["socks"]}
cachetools = "^4.2"
psycopg2-binary = "^2.8"
kafka-python = "^2.0"
python-json-logger = "^0.1.11"
structlog = "^19.2"
colorama = "^0.4"
munch = "^2.5.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "^2.10"
pytest-env = "^0.6.2"
pytest-mock = "^3.5.1"
pytest-vcr = "^1.0"

# Dev tools
commitizen = "*"
ipython = "*"
jedi = "!=0.18.0"  # 0.18.0 breaks IPython, see https://github.com/ipython/ipython/issues/12745

pre-commit = "*"
flake8 = "~3.8.4"
flake8-bugbear = "*"
black = {version="~20.8b1", allow-prereleases=true}
isort = "~5.7.0"
mypy = "*"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
version_files = [
    "uptimer/__init__.py:__version__",
    "pyproject.toml:version"
]
tag_format = "$version"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
  | hack
  | tools
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
